fix: notification message readability on hover (navazjm)

--- a/frontend/src/styles/notifications.scss
+++ b/frontend/src/styles/notifications.scss
@@ -74,8 +74,16 @@
     }
 
     &:hover {
-      opacity: 0.5;
       cursor: pointer;
+      --notif-background-color: rgba(0, 77, 148, 0.5);
+
+      &.bad {
+        --notif-background-color: rgba(138, 18, 12, 0.5);
+      }
+
+      &.good {
+        --notif-background-color: rgba(0, 148, 0, 0.5);
+      }
     }
   }
 }
